objects/Vendor_Ledger_Entry__c/Vendor_Ledger_Entry__c.object-meta.xml
<CustomObject>
    <label>Vendor Ledger Entry</label>
    <nameField>
        <label>Vendor Ledger Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>