objects/Vendor_Ledger_Entry__c/fields/Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Amount_LCY__c</fullName>
    <label>Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>