objects/Vendor_Ledger_Entry__c/fields/Close_at_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_at_Date__c</fullName>
    <label>Close at Date</label>
    <type>Date</type>
</CustomField>