objects/Vendor_Ledger_Entry__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>