objects/Vendor_Ledger_Entry__c/fields/NAV_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Vendor_No__c</fullName>
    <label>NAV Vendor No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>