objects/Vendor_Ledger_Entry__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open</label>
    <type>Checkbox</type>
</CustomField>