objects/Vendor_Ledger_Entry__c/fields/Pmt_Disc_Rcd_LCY__c.field-meta.xml
<CustomField>
    <fullName>Pmt_Disc_Rcd_LCY__c</fullName>
    <label>Pmt. Disc. Rcd. ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>