objects/Vendor_Ledger_Entry__c/fields/Purchase_LCY__c.field-meta.xml
<CustomField>
    <fullName>Purchase_LCY__c</fullName>
    <label>Purchase ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>