objects/Vendor_Ledger_Entry__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Vendor Ledger Entries</relationshipLabel>
    <relationshipName>Vendor_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>