objects/Vendor_Ledger_Entry__c/fields/Purchaser_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Code__c</fullName>
    <label>Purchaser Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>