objects/Vendor_Ledger_Entry__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Vendor Ledger Entries</relationshipLabel>
    <relationshipName>Vendor_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>