objects/Vendor_Ledger_Entry__c/fields/Vendor_Posting_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Posting_Group__c</fullName>
    <label>Vendor Posting Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>