objects/Vendor_Ledger_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Amount__c</columns>
    <columns>Amount_LCY__c</columns>
    <columns>Open__c</columns>
    <columns>Subsidiary_Company__c</columns>
    <columns>NAV_Vendor_No__c</columns>
    <columns>Posting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>contains</operation>
        <value>1-</value>
    </filters>
    <label>All</label>
</ListView>